Add Svelte integration

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -11,3 +11,61 @@ To create an https://console.cloud.google.com/apis/credentials[OAuth 2.0 Client 
 . In the Authorized JavaScript origins field, add an origin.
 . Click btn:[Create]
 . Note the Client ID.
+
+== Usage
+
+[source,javascript]
+----
+export const signInController = new GoogleSignInController(clientId)
+----
+
+For usage see xref:api:dtinth_google-sign-in-controller_GoogleSignInController_class.adoc[API documentation].
+
+== Usage with Svelte
+
+In a Svelte store:
+
+[source,typescript]
+----
+import { GoogleSignInController } from '@dtinth/google-sign-in-controller'
+import type { UserInfo } from '@dtinth/google-sign-in-controller'
+
+import { readable } from 'svelte/store'
+
+export const signInController = new GoogleSignInController(
+  '347735770628-l928d9ddaf33p8bvsr90aos4mmmacrgq.apps.googleusercontent.com',
+)
+
+export const currentUserInfo = readable<UserInfo | null>(
+  signInController.getUserInfo(),
+  (set) => {
+    set(signInController.getUserInfo())
+    return signInController.onCurrentUserChanged(() => {
+      set(signInController.getUserInfo())
+    })
+  },
+)
+
+Object.assign(window, { signInController })
+----
+
+In a Svelte component:
+
+[source,html]
+----
+<script lang="ts">
+  import { signInController, currentUserInfo } from './GoogleSignIn'
+</script>
+
+<main class="p-6">
+  {#if $currentUserInfo}
+    <button on:click={() => confirm('Sign out?') && signInController.signOut()}>
+      {$currentUserInfo.name}
+    </button>
+  {:else}
+    <button on:click={() => signInController.signIn()}>
+      Sign in with Google
+    </button>
+  {/if}
+</main>
+----
