--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -3,7 +3,7 @@
 
 Sometimes you build yourself a web application. You have the frontend and the backend. You don’t want other people to be able to access your backend, so you must protect it somehow.
 
-This library is a simple way to protect your backend with Google Sign-In.
+This library provides a simple way to protect your backend with Google Sign-In.
 
 * On the frontend, use this library to authenticate user and get an ID token. Send this ID token to the backend.
 * On the backend, verify the ID token’s integrity to authenticate yourself. See https://developers.google.com/identity/sign-in/web/backend-auth#verify-the-integrity-of-the-id-token[Verify the integrity of the ID token on Google Sign-In for Websites documentation]. Validate the `sub` claim to make sure it’s you.
