--- a/docs/modules/api/pages/dtinth_google-sign-in-controller.adoc
+++ b/docs/modules/api/pages/dtinth_google-sign-in-controller.adoc
@@ -2,10 +2,24 @@
 
 
 
+
+
 == Classes
 
-* xref:dtinth_google-sign-in-controller_GoogleSignInController_class.adoc[GoogleSignInController]
+[%header,cols="1,2",caption=""]
+|===
+|Name |Summary
+
+s|xref:dtinth_google-sign-in-controller_GoogleSignInController_class.adoc[GoogleSignInController]
+|Loads the Google APIs client library and provides a simple interface to Google Sign-In.
+|===
 
 == Interfaces
 
-* xref:dtinth_google-sign-in-controller_UserInfo_interface.adoc[UserInfo]
+[%header,cols="1,2",caption=""]
+|===
+|Name |Summary
+
+s|xref:dtinth_google-sign-in-controller_UserInfo_interface.adoc[UserInfo]
+|The user information.
+|===
